--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -6,6 +6,7 @@
     display: flex;
     padding: 10px;
     border: 2px solid grey;
+    cursor: pointer;
     img {
         width: 128px;
         height: 128px;
