--- a/scss/components/_overlay.scss
+++ b/scss/components/_overlay.scss
@@ -26,7 +26,7 @@
         top: 5px;
         cursor: pointer;
         }
-    &-text {
+    &-content {
     display: flex;
     flex-direction: column;
     align-items: center;
