--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,4 +1,6 @@
 /* ============================================= */
 /*              Typography                       */
 /* ============================================= */
-
+body {
+    font-size: .8em;
+}
