--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -4,12 +4,21 @@
 
 .card {
     display: flex;
+    align-items: center;
+    justify-content: space-evenly;
     padding: 10px;
-    border: 2px solid grey;
+    border-bottom: 2px solid grey;
     cursor: pointer;
     img {
-        width: 128px;
-        height: 128px;
+        min-width: 128px;
         border-radius: 50%;
+        margin: 10px;
+    }
+    .text-container {
+        margin: 10px;
+    }
+    &:first-child {
+        border-top: 2px solid grey;
     }
 }
+
