--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -3,7 +3,14 @@
 /* ============================================= */
 
 .main-header{
+    background: linear-gradient(to top right, #b31e23, #690f0f);
+    box-shadow: 5px 5px 10px #302B2B;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 136px;
     h1 {
+        color: white;
         text-align: center;
         margin: 0;
         padding: 50px 0;
