--- a/css/styles.css
+++ b/css/styles.css
@@ -352,7 +352,7 @@ body {
 }
 
 html {
-  margin-top: 136px;
+  margin-top: 150px;
 }
 
 body {
@@ -368,13 +368,20 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 136px;
+  height: 150px;
+  z-index: 2000;
+  text-align: center;
 }
 .main-header h1 {
   color: white;
-  text-align: center;
   margin: 0;
-  padding: 50px 0;
+  padding: 26px 0;
+}
+.main-header .search {
+  margin: 0 auto;
+  border: 2px solid #b3b11e;
+  display: inline-block;
+  border-radius: 6px;
 }
 
 /* ============================================= */
@@ -413,6 +420,7 @@ body {
   right: 0;
   bottom: 0;
   background: rgba(100, 100, 100, 0.4);
+  z-index: 1000;
 }
 
 .modal {
