--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -8,11 +8,18 @@
     position: fixed;
     top: 0;
     width: 100%;
-    height: 136px;
+    height: 150px;
+    z-index: 2000;
+    text-align: center;
     h1 {
         color: white;
-        text-align: center;
         margin: 0;
-        padding: 50px 0;
+        padding: 26px 0;
+    }
+    .search {
+        margin: 0 auto;
+        border: 2px solid #b3b11e;
+        display: inline-block;
+        border-radius: 6px;
     }
 }
