--- a/scss/components/_overlay.scss
+++ b/scss/components/_overlay.scss
@@ -8,7 +8,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(100, 100, 100, 0.4)
+    background: rgba(100, 100, 100, 0.4);
+    z-index: 1000;
 }
 
 .modal {
