--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -18,8 +18,15 @@
     }
     .search {
         margin: 0 auto;
+        display: inline-block; 
+    }
+    .searchbar {
+        padding: 5px 0;
+        outline: none;
         border: 2px solid #b3b11e;
-        display: inline-block;
         border-radius: 6px;
+        &:focus {
+            border: 3px solid #b3b11e;
+        }
     }
 }
