--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -3,16 +3,22 @@
 /* ============================================= */
 
 .card {
+    background-color: #f8f8ff;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     padding: 10px;
     border-bottom: 2px solid grey;
     cursor: pointer;
-    img {
-        min-width: 128px;
-        border-radius: 50%;
+    &:hover {
+        background-color: darken(#f8f8ff, 2%);
+    }
+    .avatar {
+        min-width: 64px;
+        width: 64px;
         margin: 10px;
+        border-radius: 50%;
+        border: 2px solid grey;
     }
     .text-container {
         margin: 10px;
