--- a/scss/components/_overlay.scss
+++ b/scss/components/_overlay.scss
@@ -3,13 +3,13 @@
 /* ============================================= */
 
 .overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     background: rgba(100, 100, 100, 0.4);
-    z-index: 1000;
+    z-index: 3000;
 }
 
 .modal {
@@ -17,23 +17,45 @@
     margin: 15% auto auto;
     position: relative;
     text-align: center;
-    background: #fff;
+    background: #f8f8ff;
     border: 1px solid #778;
     border-radius: 5px;
     padding: 30px 20px;
+    border: 2px solid grey;
     &-close {
         position: absolute;
         right: 15px;
-        top: 5px;
+        top: -15px;
         cursor: pointer;
+        font-size: 30px;
         }
     &-content {
     display: flex;
     flex-direction: column;
     align-items: center;
     }
+    .arrows {
+        width: 400px;
+        position: absolute;
+        display: flex;
+        justify-content: space-between;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .left-arrow,
+    .right-arrow {
+        cursor: pointer;
+        font-size: 60px;
+        font-weight: 1000;
+    }
+    .modalAvatar {
+        border-radius: 50%;
+        border: 2px solid grey;
+    }
 }
 
 .hidden {
     display: none;
 }
+
