--- a/css/styles.css
+++ b/css/styles.css
@@ -342,6 +342,8 @@ template {
 /* ============================================= */
 body {
   font-size: 0.8em;
+  color: #535353;
+  font-family: "Varela Round", sans-serif;
 }
 
 /* ============================================= */
@@ -382,10 +384,13 @@ body {
   display: inline-block;
 }
 .main-header .searchbar {
+  width: 300px;
+  font-size: 1.2em;
   padding: 5px 0;
   outline: none;
   border: 2px solid #b3b11e;
   border-radius: 6px;
+  background-color: #f8f8ff;
 }
 .main-header .searchbar:focus {
   border: 3px solid #b3b11e;
@@ -468,8 +473,24 @@ body {
 .modal .left-arrow,
 .modal .right-arrow {
   cursor: pointer;
+  color: #b31e23;
   font-size: 60px;
   font-weight: 1000;
+  transition: 0.5s ease-out;
+}
+.modal .left-arrow:hover,
+.modal .right-arrow:hover {
+  color: #db292f;
+}
+.modal .left-arrow::selection,
+.modal .right-arrow::selection {
+  color: none;
+  background: none;
+}
+.modal .left-arrow::-moz-selection,
+.modal .right-arrow::-moz-selection {
+  color: none;
+  background: none;
 }
 .modal .modalAvatar {
   border-radius: 50%;
